improve autolayout and expand lines of main label

--- a/TimerTweetViewer/Base.lproj/Main.storyboard
+++ b/TimerTweetViewer/Base.lproj/Main.storyboard
@@ -7,7 +7,6 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
-        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -23,24 +22,24 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loading..." lineBreakMode="tailTruncation" numberOfLines="10" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N6K-8J-6zi">
-                                <rect key="frame" x="37.5" y="167" width="300" height="333.5"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loading..." lineBreakMode="tailTruncation" numberOfLines="15" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N6K-8J-6zi">
+                                <rect key="frame" x="16" y="20" width="343.5" height="559"/>
                                 <fontDescription key="fontDescription" type="system" weight="light" pointSize="34"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="m5O-FW-8po">
-                                <rect key="frame" x="16" y="508" width="343" height="151"/>
+                                <rect key="frame" x="16" y="587" width="343" height="72"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="YEF-F5-saP">
-                                        <rect key="frame" x="279" y="87" width="64" height="64"/>
+                                        <rect key="frame" x="279" y="8" width="64" height="64"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="64" id="2h3-pJ-2Wa"/>
                                             <constraint firstAttribute="width" constant="64" id="B1F-Yv-Zcj"/>
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="UserName" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="chB-Q4-BJd">
-                                        <rect key="frame" x="21" y="93.5" width="250" height="21"/>
+                                        <rect key="frame" x="21" y="14.5" width="250" height="21"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="250" id="34f-2W-leO"/>
                                         </constraints>
@@ -49,7 +48,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="UserScreenName" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i2M-hh-GmB">
-                                        <rect key="frame" x="71" y="118.5" width="200" height="15"/>
+                                        <rect key="frame" x="71" y="39.5" width="200" height="15"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="200" id="Dfd-XI-9f9"/>
                                         </constraints>
@@ -72,13 +71,15 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="m5O-FW-8po" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="36K-Tp-jMK"/>
-                            <constraint firstItem="N6K-8J-6zi" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.8" id="72J-cG-eEk"/>
-                            <constraint firstItem="m5O-FW-8po" firstAttribute="top" secondItem="N6K-8J-6zi" secondAttribute="bottom" constant="7.5" id="8QG-PY-f6E"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="m5O-FW-8po" secondAttribute="bottom" constant="8" id="9v1-QK-a9b"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="N6K-8J-6zi" secondAttribute="bottom" constant="88" id="DVb-4x-YFm"/>
                             <constraint firstItem="N6K-8J-6zi" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="FEI-iD-eZ1"/>
+                            <constraint firstItem="N6K-8J-6zi" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="bJR-AU-zqz"/>
                             <constraint firstItem="N6K-8J-6zi" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="dKs-aB-cuV"/>
-                            <constraint firstItem="N6K-8J-6zi" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.5" id="eG2-2m-uPX"/>
+                            <constraint firstItem="N6K-8J-6zi" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="fjL-KF-sDX"/>
                             <constraint firstAttribute="trailingMargin" secondItem="m5O-FW-8po" secondAttribute="trailing" id="ogc-2z-5ow"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="N6K-8J-6zi" secondAttribute="trailing" id="qPM-vS-Kkp"/>
+                            <constraint firstItem="m5O-FW-8po" firstAttribute="top" secondItem="N6K-8J-6zi" secondAttribute="bottom" constant="8" id="vSw-1i-xP8"/>
                         </constraints>
                     </view>
                     <connections>
